# inkplate-ereader2

./: Cargo.toml  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs
src/inkplate_platform/: battery.rs  inkplate.rs  touch_event.rs
src/sdcard/: CMakeLists.txt  get_task_info.cpp  get_task_info.hpp  sd_card.cpp  sd_card.hpp
