[package]
name = "inkplate-ereader2"
version = "0.1.0"
authors = ["Greg Green <ggreen@bit-builder.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native", "ereader-support/touch", "ereader-support/simpledb"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.47.3", default-features = false }
inkplate-drivers = { path = "../inkplate-drivers", features = ["inkplate_6plus"] }
shared-bus = { version = "0.3.1", features = ["std"] }
ereader-support = { path = "../ereader-support", default-features = false }

[build-dependencies]
embuild = "0.31.3"

[package.metadata.esp-idf-sys]
esp_idf_sdkconfig = "sdkconfig"
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults"]
extra_components = [{component_dirs = ["src/sdcard"], bindings_header = "src/sdcard/sd_card.hpp"}]

[patch.crates-io]
freetype-sys = { path = "../freetype-sys" }

[patch."https://github.com/servo/rust-harfbuzz"]
harfbuzz = { path = "../rust-harfbuzz/harfbuzz" }
harfbuzz-sys = { path = "../rust-harfbuzz/harfbuzz-sys" }
